crates/viewer/re_dataframe_ui/tests/snapshots/filter_tests__boolean_equals_list_nullable@outer_null.snap
---
source: crates/viewer/re_dataframe_ui/tests/filter_tests.rs
expression: test_results
---
TestResult {
    op: NullableBoolean(
        IsNull,
    ),
    field: Field {
        name: "column",
        data_type: List(
            Field {
                name: "item",
                data_type: Boolean,
                nullable: false,
                dict_id: 0,
                dict_is_ordered: false,
                metadata: {},
            },
        ),
        nullable: true,
        dict_id: 0,
        dict_is_ordered: false,
        metadata: {},
    },
    unfiltered: ListArray
    [
      BooleanArray
    [
      true,
    ],
      null,
      BooleanArray
    [
      true,
      true,
    ],
      BooleanArray
    [
      false,
      false,
    ],
      BooleanArray
    [
      true,
      false,
    ],
    ],
    filtered: ListArray
    [
      null,
    ],
}
